--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     </head>
 <body>
     <nav>
-        <a href = "home.html">home</a>
+        <a href = "index.html">home</a>
             <a href = "projects.html">projects</a>
             <a href = "contact.html">contact me</a>
     </nav>
