--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 <h2 class="list_title red">didn't learn development till now... so no projects</h2>
 <p></p>
 <p>
-<a href="https://https://github.com/ratneeshh">github</a>
+<a href="https://github.com/ratneeshh">github</a>
 <br><span>as empty as my heart</span>
 
 
