--- a/projects.html
+++ b/projects.html
@@ -11,11 +11,12 @@
             <a href = "projects.html">projects</a>
             <a href = "contact.html">contact me</a>
     </nav>
-<h2 class="list_title red">didn't learn development till now... so no projects</h2>
+<h2 class="list_title red">ah, the grand journey of web dev, where I’ve bravely ventured through the treacherous terrains of HTML and CSS, but alas, the elusive beast known as JavaScript remains just out of reach. 🌐🛡️</h2>
 <p></p>
 <p>
 <a href="https://github.com/ratneeshh">github</a>
 <br><span>as empty as my heart</span>
+<br><span>project banane vaaste JS aana jaruri hunda si!</span>
 
 
 </body>
