--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 <p>
 <a href="https://github.com/ratneeshh">github</a>
 <br><span>as empty as my heart</span>
-<br><span>focussed on ServiQue as of now! did DSA as well:)</span>
+<br><span>focussed on ServiQue as of now! doing DSA as well:)</span>
 
 
 </body>
