--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,11 @@
 </p>
 <p>
 <a href="https://www.linkedin.com/in/ratnesh-anand-nitp">linkedin</a>
-<br><span>i come here to get some really good motivation</span>
+<br><span>shit place</span>
 </p>
 <p>
-    <a href="https://https://www.instagram.com/ratneeshh/">instagram dm</a>
-    <br><span>gals can have special previllage here</span>
+    <a href="https://www.instagram.com/ratneeshh/">instagram dm</a>
+    <br><span>disabled as of now!</span>
     </p>
 
 </body>
