--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <p></p>
 <p>
 <a href="https://x.com/ratneeshh">twitter</a>
-<br><span>no known person here, so i do heavy shitposting alongside posting my learning updates</span>
+<br><span>heavy shitposting</span></span>
 </p>
 <p>
 <a href="https://www.linkedin.com/in/ratnesh-anand-nitp">linkedin</a>
