--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 
         <div class="quote">
             <i class="red">Royal Challengers bkl❤️</i>
-            <p></p>
+            <p>-only cuz Mr. Nags</p>
             </div>
 
 
