--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         
         <p>everything you want to know about me could be found here, and i am not joking.</p>
 
-        <p>i don't like development at all, doing this out of fomo. DSA is lob *_*</p>
+        <p>working on my project "ServiQue" , also doing DSA alongside</p>
 
         <div class="quote">
-            <i class="red">naadaan parindeeyyy... ghar aajaaa</i>
-            <p>-irshad kamil</p>
+            <i class="red">Royal Challengers bkl❤️</i>
+            <p></p>
             </div>
 
 
