--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href = "contact.html">contact me</a>
         </nav>
 
-        <img src="profile.jpeg" class = "painting">
+        <img src="profile.jpg" class = "painting">
         <h1 class = "intro red" > ratnesh </h1>
 
         <p>hi, my name and cool photo is up there</p>
