--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 
         <title>Ratnesh</title>
         <link rel="stylesheet" href="main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 <body>
     <nav>
@@ -15,11 +16,11 @@
 <p></p>
 <p>
 <a href="https://x.com/ratneeshh">twitter</a>
-<br><span>heavy shitposting</span></span>
+<br><span>heavy shitposting!</span>
 </p>
 <p>
 <a href="https://www.linkedin.com/in/ratnesh-anand-nitp">linkedin</a>
-<br><span>shit place</span>
+<br><span>so many successfull people out here!</span>
 </p>
 <p>
     <a href="https://www.instagram.com/ratneeshh/">instagram dm</a>
