--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Ratnesh</title>
         <link rel="stylesheet" href="main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     </head>
 
@@ -16,18 +17,18 @@
         <img src="profile.jpg" class = "painting">
         <h1 class = "intro red" > ratnesh </h1>
 
-        <p>hi, my name and cool photo is up there</p>
+        <p>hi, my name and cool photo is up there (i was coding this shit!)</p>
 
         <p>welcome to my HyperText page, on the World Wide Web!</p>
         <p>this is my internet home. here i keep almost all my stuff some good, some wierd, some abandoned.</p>
         
         <p>everything you want to know about me could be found here, and i am not joking.</p>
 
-        <p>working on my project "ServiQue" , also doing DSA alongside</p>
+        <p>working on MERN projects, also doing DSA alongside in java.</p>
 
         <div class="quote">
             <i class="red">Royal Challengers bkl❤️</i>
-            <p></p>
+            <p>-gg</p>
             </div>
 
 
