--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 
         <title>Ratnesh</title>
         <link rel="stylesheet" href="main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 <body>
     <nav>
@@ -11,12 +12,11 @@
             <a href = "projects.html">projects</a>
             <a href = "contact.html">contact me</a>
     </nav>
-<h2 class="list_title red">Building "ServiQue"</h2>
+<h2 class="list_title red">hop onto my github</h2>
 <p></p>
 <p>
-<a href="https://github.com/ratneeshh">github</a>
-<br><span>as empty as my heart</span>
-<br><span>focussed on ServiQue as of now! doing DSA as well:)</span>
+<a href="https://github.com/ratneeshh">here</a>
+
 
 
 </body>
